# kafvio

./: .gitignore  24fps-auto.pfs  30fps-recording-config.pfs  CMakeLists.txt  LICENSE  Makefile  README.md  anchors.txt  bad.list  cam_config_120fps_auto-balance.pfs  eval_new.py  main.cpp  uselib
backup/2018-05-07_train-v2-rm-superpixel_extraction-transfer_three-anchors_focal-loss_micro-19/: stopbackward_three-anchors_micro-19.cfg
backup/2018-05-07_train-v2-rm-superpixel_extraction-transfer_three-anchors_focal-loss_nano-15/: stopbackward_three-anchors_nano.cfg
basler-config/: 140fps_all-auto.pfs
build-copy/: CMakeCache.txt  Makefile  cmake_install.cmake  distance-test.txt  dummy-server  get-training-list.sh  main  rm-cmakefiles.sh  udp-server.cpp
cmake/: FindCUDNN.cmake
cmake/Modules/: FindPylon.cmake
distance_comparison/: diff_distances.txt  diff_undistort-straight-distances.txt  perpendiculat_distance.txt  straight_distance.txt  undistort_straight-distance.txt
evaluations/: .~lock.2018-05-08_first-stage_ultra-convergence_four-anchors_focal-loss_15-nano.csv#  __001_2018-05-08_Summary.ods
examples/: udp-server.cpp
ext-backup/: weights_backup
nvxio/: Makefile
src/: basler-demo.cpp  darknet-debug.cpp  darknet-util.hpp  detector-wrapper.cpp  detector-wrapper.hpp  detector.c  distance_calc.h  main.cpp  object.cpp  object.h  object.hpp  old_object.cpp  old_object.hpp  old_yolo_console_dll.cpp  opencv_kalman.hpp  opencv_utils.hpp  tracker.cpp  tracker.hpp  yolo_console_dll.cpp  yolo_v2_class.cpp  yolo_v2_class.hpp
src/kalman/: kalman_config.h  kalman_filter.cpp  kalman_filter.h  kalman_tracker.h
src/odometry/: odometry.h
src/wrapper/: darknet-debug.cpp  darknet-util.hpp  detector-wrapper.cpp  detector-wrapper.hpp  distance_calc.h  opencv_utils.hpp
tests/: CMakeLists.txt  cv-mouse-tracker.cpp  example-test.cpp  kafvio-mouse-tracker.cpp
vision-works/: main_object_tracker.cpp
